# EE392C

./: .gitignore  README.md  WORKFLOW.md  chat-history.md  pyproject.toml  sbuf_sram_22nm.cfg  setup.sh
configs/hierarchy/: trainium2_baseline.yaml  trainium2_diff_mem.yaml  (+5 more)
docs/: AREA_BUDGET.md  CHANGES.md  LIFETIME_ANALYSIS_AUDIT.md  NEURON_PROFILE.md  PLACEMENT_AND_EVICTION.md  PLACEMENT_CODE_WALKTHROUGH.md  TENSOR_MAPPER_AUDIT.md  TODOS.md  TRACE_REPLAY_WALKTHROUGH.md  WORKFLOW.md
docs/dev/: TODOS.md  (+1 more)
experiments/: decode_baseline_vs_diff.yaml
profiler/: LLAMA32_PROFILING_AND_DMSIM.md  NEURON_PROFILE.md  capture_and_export.sh  capture_and_export_qwen.sh  dram_hbm_spill_findings.md  global_metric_store.json  run_llama32_1b_trn2.py  run_qwen_moe_trn2.py  visualize_profiling.py  visualize_tensor_analysis.py  visualize_trace.py
results/: MILESTONES_2_3.md  MILESTONES_4.md  MILESTONE_5_QWEN.md  RESULTS_GUIDE.md  lifetime_llama.json  lifetime_qwen.json  m4_llama_25sbuf_25hbm_tiered.json  m4_llama_25sbuf_50hbm_tiered.json  m4_llama_50sbuf_10hbm_tiered.json  m4_llama_50sbuf_25hbm_tiered.json
scripts/: compare_all_tech_sweeps.sh  compare_ltram_sweep.sh  compare_stram_sweep.sh  plot_lifetime_results.py  plot_milestone_results.py  run_m4_compares.sh  run_memory_sweep.py
tests/: test_area_budget.py  test_lifetime_analysis.py  test_llama_regression.py  test_neuron_ingest.py  test_placement.py  test_qwen_moe_tensor_mapper.py  test_schedule.py  test_sim.py  test_sim_invariants.py  test_tensor_name_mapper.py  test_transfer.py  test_transfer_cost_spill.py  test_writeback.py
(+150 files in other folders)
